# jobqueue-server

./: jobqueue-client.cabal  jobqueue-common.cabal  jobqueue-server.cabal  jobqueue.cabal  test.conf  yesodcrud-client.cabal  yesodcrud-server.cabal  yesodcrud-type.cabal
exe/: jobqueueserver.hs  yesodcrud-client.hs  yesodcrud-server.hs
jobqueue-client/: jobqueue-client.cabal
jobqueue-client/exe/: jobclient.hs  jobqueue-client.hs
jobqueue-client/lib/: modelinstaller.hs
jobqueue-client/lib/HEP/Automation/JobQueue/Client/: Command.hs  Config.hs  Job.hs  Phase.hs  ProgType.hs
jobqueue-client/lib/YesodCRUD/Client/: Job.hs
jobqueue-common/src/HEP/Automation/JobQueue/: Config.hs  JobQueue.hs
jobqueue-common/src/HEP/Automation/JobQueue/JobType/: V2.hs  V3.hs
jobqueue-common/src/HEP/Automation/JobQueue/Server/: Type.hs
jobqueue-server/: jobqueue-server.cabal
jobqueue-server/exe/: jobqueue-server.hs
jobqueue-server/lib/HEP/Automation/JobQueue/Server/: Type.hs  Yesod.hs
jobqueue-server/lib/YesodCRUD/Server/: Type.hs  Yesod.hs
jobqueue-type/: jobqueue-type.cabal
jobqueue-type/lib/HEP/Automation/JobQueue/: Type.hs
lib/Application/YesodCRUD/: Type.hs
lib/Application/YesodCRUD/Client/: Job.hs
lib/Application/YesodCRUD/Server/: Type.hs  Yesod.hs
lib/HEP/Automation/JobQueue/Client/: Job.hs
lib/HEP/Automation/JobQueue/Server/: Yesod.hs
migrationsrc/: jobserialize.hs
oldcode/: MyTest.hs
oldcode/jobqueue-client/: jobqueue-client.cabal
oldcode/jobqueue-client/exe/: MyTest.hs
oldcode/jobqueue-client/lib/HEP/Automation/JobQueue/Client/: Command.hs  Job.hs  Phase.hs  Type.hs
oldcode/jobqueue-client/template/: config.txt.sample
oldcode/jobqueue-common/: jobqueue-common.cabal
oldcode/jobqueue-common/src/HEP/Automation/JobQueue/: Config.hs  JobJson.hs  JobQueue.hs  JobType.hs
oldcode/jobqueue-common/src/HEP/Automation/JobQueue/Server/: Type.hs
oldcode/jobqueue-common/test/: test.hs
oldcode/jobqueue-server/: jobqueue-server.cabal
oldcode/jobqueue-server/lib/: Import.hs
oldcode/jobqueue-server/lib/HEP/Automation/JobQueue/Server/: JobAssign.hs  Work.hs  Yesod.hs
oldcode/jobqueue-server/lib/HEP/Automation/JobQueue/Server/trash/: Handler.hs
oldcode/jobqueue-server/migrationsrc/: jobserialize.hs
oldcode/jobqueue-server/templates/: job.hamlet  joberror.hamlet  listjob.hamlet
src/: jobclient.hs  jobfetcher.hs  jobmigration.hs  jobqueueserver.hs  jobsender.hs
src/HEP/Automation/JobQueue/: Access.hs  Config.hs  Interprete.hs  JobJson.hs  JobQueue.hs  JobQueueYesod.hs  JobType.hs  QueueServerWork.hs  Test.hs  Type.hs
src/HEP/Automation/JobQueue/Client/: Command.hs  Job.hs  Phase.hs  Type.hs
src/HEP/Automation/JobQueue/JobQueue/: V3.hs
src/HEP/Automation/JobQueue/JobType/: V3.hs
src/HEP/Automation/JobQueue/Server/: JobAssign.hs  Type.hs  Work.hs  Yesod.hs
src/HEP/Automation/JobQueue/Server/trash/: Work.hs
yesodcrud-client/: test.conf  yesodcrud-client.cabal
yesodcrud-client/exe/: yesodcrud-client.hs
yesodcrud-client/lib/Application/YesodCRUD/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
yesodcrud-client/lib/YesodCRUD/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
yesodcrud-server/: yesodcrud-server.cabal
yesodcrud-server/exe/: yesodcrud-server.hs
yesodcrud-server/lib/Application/YesodCRUD/Server/: Yesod.hs
yesodcrud-server/lib/YesodCRUD/Server/: Type.hs  Yesod.hs
yesodcrud-type/: yesodcrud-type.cabal
yesodcrud-type/lib/Application/YesodCRUD/: Type.hs
yesodcrud-type/lib/YesodCRUD/: Type.hs
yesodcrud-type/test/: test.hs
