Name:		jobqueue-common
Version:	0.0.6.0
Synopsis:	common library for job scheduler for event generation 
Description: 	common library job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, containers, mtl>2, safecopy>0.5, acid-state>0.4, 
                 madgraph-auto==0.5.*, cereal >= 0.3.1.0, madgraph-auto-model, 
                 aeson, attoparsec, vector, text, parsec, configparser
  Exposed-Modules: 
                   HEP.Automation.JobQueue.JobType
                   HEP.Automation.JobQueue.JobQueue
                   HEP.Automation.JobQueue.JobJson
                   HEP.Automation.JobQueue.Config



		 
