Name:		jobqueue-server
Version:	0.0.2.0
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2

Executable jobqueueserver
  Main-is: jobqueueserver.hs
  hs-source-dirs: src
  Build-Depends: base>4, mtl>2, jobqueue-common, yesod, yesod-core, 
                 bytestring, enumerator, wai-extra, wai
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, containers, mtl>2, safecopy>0.5, acid-state>0.4, 
                 jobqueue-common
  Exposed-Modules: 
                   HEP.Automation.JobQueue.Type
                   HEP.Automation.JobQueue.Access
                   HEP.Automation.JobQueue.Test

		 
