Name:		jobqueue-server
Version:	0.1.2
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2

Executable jobqueueserver
  Main-is: jobqueueserver.hs
  hs-source-dirs: src
  Build-Depends: base == 4.*, 
                 mtl == 2.*, jobqueue-common, 
                 yesod == 0.9.*, yesod-core, 
                 bytestring == 0.9.*, 
                 enumerator, wai-extra, wai, 
                 aeson == 0.4.*,
                 containers,
                 acid-state == 0.4.*, 
                 attoparsec == 0.10.*, 
                 jobqueue-server
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

Executable jobserialize
  Main-is: jobserialize.hs
  hs-source-dirs: migrationsrc
  Build-Depends: base>4, mtl>2, 
                 jobqueue-common >= 0.1.3.999,
                 containers == 0.4.*, 
                 yesod == 0.9.*, 
                 yesod-core == 0.9.*, 
                 bytestring == 0.9.*, 
                 enumerator == 0.4.*, wai-extra, wai, 
                 aeson == 0.4.*, 
                 acid-state, 
                 attoparsec == 0.10.*, 
                 hxt == 9.0.*, 
                 regular, regular-xmlpickler, blaze-builder
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all



Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 containers, 
                 mtl == 2.*, 
                 safecopy > 0.5, 
                 acid-state == 0.4.*, 
                 madgraph-auto, 
                 jobqueue-common >= 0.1.3.999,
                 configparser, parsec, 
                 webdav-manager >= 0.0.4, transformers, 
                 unordered-containers == 0.1.*,
                 yesod == 0.9.*, 
                 wai == 0.4.*
  Exposed-Modules: HEP.Automation.JobQueue.Server.JobAssign
                   HEP.Automation.JobQueue.Server.Work
                   HEP.Automation.JobQueue.Server.Yesod


		 
