Name:		yesodcrud-client
Version:	0.0
Synopsis:	client program that communicates with model-server
Description: 	client program that communicates with model-server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable yesodcrud-client
  Main-is: yesodcrud-client.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.1.*, 
                   cmdargs == 0.10.*, 
                   yesodcrud-client

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.1.*, 
                   directory == 1.1.*, 
                   filepath == 1.3.*,
                   cmdargs == 0.10.*, 
                   yesodcrud-type == 0.0.*,
                   configurator == 0.2.*,
                   bytestring == 0.9.*, 
                   http-conduit == 1.6.*, 
                   http-types == 0.7.*, 
                   aeson == 0.6.*,
                   attoparsec == 0.10.*, 
                   time == 1.4.*, 
                   uuid == 1.2.*

  Exposed-Modules: 
                   Application.YesodCRUD.Client.ProgType
                   Application.YesodCRUD.Client.Job
                   Application.YesodCRUD.Client.Config
                   Application.YesodCRUD.Client.Command
  Other-Modules: 

 
		 