Name:		jobqueue-client
Version:	0.1.999
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8


Executable jobclient 
  Main-is: jobclient.hs
  hs-source-dirs: exe
  Build-Depends: base>4, 
                 containers, 
                 mtl == 2.*, 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*,
                 attoparsec == 0.10.*,
                 jobqueue-common >= 0.2.999, 
                 hslogger == 1.1.*,
                 parsec, 
                 pipeline == 0.3.*, 
                 http-types, 
                 http-conduit == 1.4.*, 
                 madgraph-auto, 
                 bytestring == 0.9.*, 
                 aeson == 0.6.*, 
                 cmdargs == 0.9.*, 
                 jobqueue-client

  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all



Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 containers, 
                 mtl>2, 
                 safecopy == 0.6.*, 
                 acid-state == 0.6.*, 
                 hslogger == 1.1.*,
                 jobqueue-common >= 0.2.999 && < 0.4, 
                 attoparsec == 0.10.*,
                 parsec, 
                 pipeline, 
                 http-types == 0.6.*, 
                 http-conduit == 1.4.*, 
                 madgraph-auto, 
                 bytestring,  
                 aeson == 0.6.* , 
                 cmdargs == 0.9.* , 
                 webdav-manager, 
                 filepath, 
                 hslogger == 1.1.*, 
                 text == 0.11.*
  Exposed-Modules: 
                   HEP.Automation.JobQueue.Client.Type 
                   HEP.Automation.JobQueue.Client.Job
                   HEP.Automation.JobQueue.Client.Phase
                   HEP.Automation.JobQueue.Client.Command                 

		 
