Name:		jobqueue-server
Version:	0.0
Synopsis:	jobqueue server
Description: 	jobqueue server
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Executable jobqueue-server
  Main-is: jobqueue-server.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 yesod, 
                 uuid,
                 bytestring, 
                 containers, 
                 jobqueue-type,
                 jobqueue-server
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans 
  ghc-prof-options: -caf-all -auto-all

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                 aeson,
                 attoparsec,
                 base == 4.*, 
                 blaze-html,
                 blaze-markup,
                 bytestring,
                 conduit,
                 containers, 
                 filepath,
                 mtl, 
                 monad-loops,
                 path-pieces,
                 persistent,
                 persistent-sqlite,
                 resourcet,
                 text,
                 uuid,
                 wai-extra,
                 wai > 3,
                 yesod-core,
                 yesod-form,
                 yesod,
                 jobqueue-type
  Exposed-Modules: 
                   HEP.Automation.JobQueue.Server.Type
                   HEP.Automation.JobQueue.Server.Yesod



		 