Name:		jobqueue-type
Version:	0.0
Synopsis:	jobqueue type 
Description: 	jobqueue type 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   aeson,
                   base == 4.*, 
                   bytestring,
                   containers,
                   mtl, 
                   persistent,
                   persistent-sqlite,
                   persistent-template, 
                   text,
                   uuid

  exposed-modules: YesodCRUD.Type