Name:		jobqueue-client
Version:	0.1.999
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8


Executable jobclient 
  Main-is: jobclient.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 containers, 
                 mtl, 
                 safecopy, 
                 acid-state,
                 attoparsec,
                 jobqueue-common, 
                 hslogger,
                 parsec, 
                 pipeline, 
                 http-types, 
                 http-conduit, 
                 madgraph-auto, 
                 bytestring, 
                 aeson, 
                 cmdargs, 
                 jobqueue-client

  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all



Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 containers, 
                 mtl, 
                 safecopy, 
                 acid-state, 
                 hslogger,
                 jobqueue-common, 
                 attoparsec,
                 parsec, 
                 pipeline, 
                 http-types, 
                 http-conduit, 
                 madgraph-auto, 
                 bytestring,  
                 aeson, 
                 cmdargs, 
                 webdav-manager, 
                 filepath, 
                 hslogger, 
                 text
  Exposed-Modules: 
                   HEP.Automation.JobQueue.Client.Type 
                   HEP.Automation.JobQueue.Client.Job
                   HEP.Automation.JobQueue.Client.Phase
                   HEP.Automation.JobQueue.Client.Command                 

		 
