Name:		jobqueue-server
Version:	0.1.999
Synopsis:	job scheduler for event generation 
Description: 	job scheduler for event generation
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8

Executable jobqueueserver
  Main-is: jobqueueserver.hs
  hs-source-dirs: exe
  Build-Depends: base == 4.*, 
                 mtl, 
                 jobqueue-common, 
                 bytestring, 
                 wai-extra, 
                 wai, 
                 aeson,
                 containers,
                 acid-state, 
                 attoparsec, 
                 yesod, 
                 yesod-core, 
                 --
                 jobqueue-server


  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all


-- Executable jobserialize
--  Main-is: jobserialize.hs
--  hs-source-dirs: migrationsrc
--  Build-Depends: base>4, mtl>2, 
--                 jobqueue-common == 0.1.3.999,
--                 containers == 0.4.*, 
--                 yesod == 0.9.*, 
--                 yesod-core == 0.9.*, 
--                 bytestring == 0.9.*, 
--                 enumerator == 0.4.*, wai-extra, wai, 
--                 aeson == 0.4.*, 
--                 acid-state == 0.6.*, 
--                 attoparsec == 0.10.*, 
--                 hxt == 9.0.*, 
--                 regular, regular-xmlpickler, blaze-builder
 -- ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all



Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 -- 
                 acid-state, 
                 aeson,
                 bytestring,
                 conduit,
                 configurator,
                 containers, 
                 data-default,
                 jobqueue-common >= 0.2.999,
                 madgraph-auto, 
                 mtl, 
                 parsec, 
                 pipeline-eventgen,
                 safecopy, 
                 shakespeare,
                 template-haskell,
                 text,
                 transformers, 
                 unordered-containers,
                 wai, 
                 webdav-manager,
                 yesod,
                 yesod-form


  Exposed-Modules: HEP.Automation.JobQueue.Server.JobAssign
                   HEP.Automation.JobQueue.Server.Work
                   HEP.Automation.JobQueue.Server.Yesod
  Other-Modules: 
                   Import

		 
